fix: 🐛 Fix header not showing up on iPad Pro

--- a/src/global.scss
+++ b/src/global.scss
@@ -41,7 +41,7 @@
 }
 
 
-@media(max-width: 1024px) {
+@media(max-width: 1026px) {
   .web-only {
     display: none;
   }
@@ -60,7 +60,7 @@
   }
 }
 
-@media(min-width: 1023px) {
+@media(min-width: 1025px) {
   .mobile-only {
     display: none;
   }
